# android-knowledgepack-runner

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/knowledgepack-libs/include/: kb.h  testdata.h
app/src/androidTest/java/com/sensiml/knowledgepackrunner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  knowledgepack-wrapper.cpp  sensiml_recognition_run.cpp
app/src/main/java/com/sensiml/knowledgepackrunner/: KnowledgePackActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sensiml/knowledgepackrunner/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
